add some files in initialize

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -25,10 +25,16 @@ OBJS_DIR	=	objs/
 #	|-second/
 #	|-third/
 
-UTILS_DIR	=	$(SRCS_DIR)utils/ft_atoi.c
+INIT_DIR	=	init/
+
+UTILS_DIR	=	$(SRCS_DIR)utils/ft_atoi.c\
+				$(SRCS_DIR)utils/write_error.c
 
 PROGRAM_DIR	=	$(SRCS_DIR)program/check_input.c\
-				$(SRCS_DIR)program/main.c
+				$(SRCS_DIR)program/main.c\
+				$(SRCS_DIR)program/$(INIT_DIR)program_init.c\
+				$(SRCS_DIR)program/$(INIT_DIR)forks_init.c\
+				$(SRCS_DIR)program/$(INIT_DIR)philos_init.c\
 
 SRCS	=	$(UTILS_DIR) $(PROGRAM_DIR)
 
